Updated: Seguimos avanzando: PC

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,16 +1,9 @@
 <shared-header></shared-header>
-
-
-
-<!-- <div class="home content">
+<div class="home content">
   <div class="home__content">
-    <video class="home__content__video puff-in-center" controls>
-      <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
-      Tu navegador no soporta el elemento de video.
-    </video>
-    <div class="home__content__info">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At impedit obcaecati suscipit et magni qui asperiores dicta! Nobis, necessitatibus atque iste incidunt repellendus ratione sed maiores minima soluta doloremque. Quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorum illum corrupti, autem perferendis facilis? Quisquam earum, ullam non repudiandae fugiat corporis veniam quod labore iusto, distinctio itaque perferendis dicta?</p>
+    <div class="home__card">
+      <app-card-animated />
     </div>
   </div>
-</div> -->
+</div>
 
