--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -2,15 +2,7 @@
   &__content {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    max-width: 1000px;
-    margin: 0 auto;
-    &__video {
-      width: 100%;
-      max-height: 550px;
-      object-fit: cover;
-      border-radius: 0.5rem;
-    }
+    justify-content: center;
     &__info {
       width: 100%; /* Haz que el texto ocupe todo el ancho disponible */
       text-align: center;
