--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -1,7 +1,8 @@
 
 <div class="header-container">
-  <img class="kenburns-top" src="../../../../assets/imagenes/home/header-2.jpg" alt="">
+  <img class="kenburns-top" src="../../../../assets/imagenes/home/header.jpg" alt="">
   <h1 class="focus-in-contract-bck">BIENVENIDOS A BASAMENTO SRL</h1>
+  <h4 class="text-focus-in">Servicios de Construcción</h4>
 </div>
 
 
