--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,7 +1,10 @@
 .header-container {
   position: relative;
   width: 100%;
-  height: 550px;
+  height: 250px;
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
 }
 
 img.kenburns-top {
@@ -15,13 +18,24 @@ img.kenburns-top {
 
 h1.focus-in-contract-bck {
   position: absolute;
-  top: 50%;
-  // left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 2rem;
+  color: #B8A486;
+  font-size: 3rem;
   text-align: center;
   width: 100%;
-  margin: 0; /* Elimina el margen por defecto del párrafo */
+  margin: 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 10px;
+}
+
+h4.text-focus-in {
+  position: absolute;
+  color: #849cae;
+  font-size: 1.5rem;
+  text-align: center;
+  width: 100%;
+  margin-top: 6rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
 
