--- a/src/app/client/components/card-animated/card-animated.component.scss
+++ b/src/app/client/components/card-animated/card-animated.component.scss
@@ -1,6 +1,6 @@
 .card {
-  margin-top: 20rem;
-  margin-bottom: 20rem;
+  // margin-top: 20rem;
+  // margin-bottom: 20rem;
   position: relative;
   display: flex;
   align-items: center;
