--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -1,13 +1,60 @@
 .home {
+  background-color: #ffffff00;
   &__content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    &__info {
-      width: 100%; /* Haz que el texto ocupe todo el ancho disponible */
-      text-align: center;
+    &__info__primary  {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      h1 {
+        margin-top: 10rem;
+        font-size: 2rem; /* Tamaño de fuente */
+        font-weight: bold; /* Negrita */
+        color: #333; /* Color de texto */
+        text-align: center; /* Alineación centrada */
+        margin-bottom: 1rem; /* Margen inferior */
+        text-transform: uppercase; /* Convertir a mayúsculas */
+        letter-spacing: 2px; /* Espaciado entre letras */
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); /* Sombra de texto */
+      }
+      section {
+        margin-top: 10rem;
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        padding: 20px;
+      }
+    }
+    &__info__secondary {
+      .info-box {
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: #0077B5;
+        height: 25rem;
+        width: 56.25rem;
+        h2 {
+          font-size: 1.8rem;
+        }
+        p {
+          width: 85%;
+          text-align: justify;
+        }
+      }
+      margin-top: 20rem;
+      margin-bottom: 20rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
     }
   }
+
 }
 
 
