--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -46,7 +46,7 @@
 
       <div class="info-box">
         <h2>Institucional</h2>
-        <p>Basamento SRL es un equipo de expertos dedicados a ofrecer servicios de construcción de alta calidad. Con una amplia experiencia en el sector, nos esforzamos por brindar un servicio personalizado y de vanguardia en la industria de la construcción. Nuestro compromiso diario es proporcionar soluciones innovadoras y un asesoramiento integral en cada proyecto, asegurando la satisfacción y confianza de nuestros clientes.</p>
+        <p>Basamento SRL es un equipo de profesionales comprometidos con la excelencia en la construcción. Con una sólida trayectoria en el sector, nos esforzamos por ofrecer un servicio personalizado y de alta calidad. Buscamos siempre soluciones innovadoras y brindamos asesoramiento integral en cada proyecto, garantizando la satisfacción de nuestros clientes.</p>
         <app-button-info-card></app-button-info-card>
       </div>
 
