--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -70,7 +70,7 @@
       </div>
 
       <div>
-        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
+        <p-card header="Innovación Tecnológica Avanzada" subheader="Vanguardia Tecnológica" [style]="{ width: '360px' }">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
