--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -1,8 +1,8 @@
 
-<div class="header-container">
-  <img class="kenburns-top" src="../../../../assets/imagenes/home/header-3.jpg" alt="">
+<div class="header">
+  <video src="../../../../assets/videos/home/video_slider.mp4" autoplay muted loop></video>
   <h1 class="focus-in-contract-bck">BIENVENIDOS A BASAMENTO SRL</h1>
-  <h4 class="text-focus-in">Servicios de Construcción</h4>
+  <h4 class="text-focus-in">Ingeniería y Construcción</h4>
 </div>
 
 
