--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,41 +1,42 @@
-.header-container {
+
+.header {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 50vh; /* Ajusta la altura del video según tu necesidad */
   display: flex;
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* Para recortar el video si es necesario */
 }
 
-img.kenburns-top {
+.header video {
   position: absolute;
-  top: 0;
+  top: 50%; /* Coloca el video en la mitad vertical */
   left: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  transform: translateY(-50%); /* Centra verticalmente el video */
+  object-fit: cover; /* Para cubrir toda la área del contenedor */
 }
 
-h1.focus-in-contract-bck {
+.header h1,
+.header h4 {
   position: absolute;
-  color: #B8A486;
-  font-size: 3rem;
+  z-index: 1; /* Para que estén por encima del video */
   text-align: center;
-  width: 100%;
-  margin: 0;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  padding: 10px;
-  border-radius: 10px;
+  color: #ffffffcb;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-h4.text-focus-in {
-  position: absolute;
-  color: #849cae;
-  font-size: 1.5rem;
-  text-align: center;
-  width: 100%;
-  margin-top: 6rem;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+.header h1 {
+  font-size: 3rem; /* Tamaño de fuente del h1 */
+  top: 45%; /* Coloca el h1 en la mitad vertical */
+  transform: translateY(-50%); /* Centra verticalmente el h1 */
+}
+
+.header h4 {
+  font-size: 1.5rem; /* Tamaño de fuente del h4 */
+  top: calc(50% + 3.5rem); /* Coloca el h4 2rem por debajo del h1 */
+  transform: translateY(-50%); /* Centra verticalmente el h4 */
 }
 
