--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,42 +1,45 @@
-
 .header {
   position: relative;
   width: 100%;
-  height: 50vh; /* Ajusta la altura del video según tu necesidad */
+  height: 50vh; // Ajusta la altura del video según tu necesidad
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden; /* Para recortar el video si es necesario */
+  overflow: hidden; // Para recortar el video si es necesario
+
+  video {
+    position: absolute;
+    top: 50%; // Coloca el video en la mitad vertical
+    left: 0;
+    width: 100%;
+    height: auto;
+    transform: translateY(-50%); // Centra verticalmente el video
+    object-fit: cover; // Para cubrir toda la área del contenedor
+  }
+
+  h1,
+  h4 {
+    position: absolute;
+    z-index: 1; // Para que estén por encima del video
+    text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  }
+
+  h1 {
+    font-size: 3rem; // Tamaño de fuente del h1
+    top: 40%; // Coloca el h1 en la mitad vertical
+    transform: translateY(-50%); // Centra verticalmente el h1
+    color: #ffff; // Color del texto
+  }
+
+  h4 {
+    font-size: 1.5rem; // Tamaño de fuente del h4
+    top: calc(50% + 2rem); // Coloca el h4 2rem por debajo del h1
+    transform: translateY(-50%); // Centra verticalmente el h4
+    color: #ffffffc6;
+  }
 }
 
-.header video {
-  position: absolute;
-  top: 50%; /* Coloca el video en la mitad vertical */
-  left: 0;
-  width: 100%;
-  height: auto;
-  transform: translateY(-50%); /* Centra verticalmente el video */
-  object-fit: cover; /* Para cubrir toda la área del contenedor */
-}
 
-.header h1,
-.header h4 {
-  position: absolute;
-  z-index: 1; /* Para que estén por encima del video */
-  text-align: center;
-  color: #ffffffcb;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-}
 
-.header h1 {
-  font-size: 3rem; /* Tamaño de fuente del h1 */
-  top: 45%; /* Coloca el h1 en la mitad vertical */
-  transform: translateY(-50%); /* Centra verticalmente el h1 */
-}
-
-.header h4 {
-  font-size: 1.5rem; /* Tamaño de fuente del h4 */
-  top: calc(50% + 3.5rem); /* Coloca el h4 2rem por debajo del h1 */
-  transform: translateY(-50%); /* Centra verticalmente el h4 */
-}
 
