--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -109,7 +109,7 @@
         </strong>
       </p>
       <!-- <img  data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt=""> -->
-      <video data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer (ended)="restartVideo(videoPlayer)" controls>
+      <video poster="assets/imagenes/nosotros/play-7.jpg" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer (ended)="restartVideo(videoPlayer)" controls>
         <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
