--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -45,8 +45,8 @@
       width: 40%;
       object-fit: cover;
       border-radius: 0.5rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+      object-fit: scale-down;
     }
   }
   &__contact {
