--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,13 @@
+@import "primeicons/primeicons.css";
+@import "~animate.css/animate.css";
+@import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
+
+
 // FUENTES
 @font-face {
   font-family: montserrat-regular-400;
   src: url('./assets/fonts/Montserrat/static/Montserrat-Medium.ttf');
 }
-
-@import "primeicons/primeicons.css";
-@import "~animate.css/animate.css";
-@import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
-
-// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-
-// ESTILOS GENERALES DE MI APLICACIÓN
 
 //COLORES
 :root {
@@ -21,6 +18,46 @@
   --color-terciary: #F2FDFE;
   --color-hover: #BFC8D3;
 }
+
+
+// ESTILOS DE INICIALIZACION
+
+body, h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  color: var(--color-primary);
+  background-color: var(--color-background);
+}
+
+body {
+  font-size: 1rem;
+  width: 100%;
+  font-family: montserrat-regular-400;
+  padding-top: 60px;
+}
+
+h1 {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  color: var(--color-secondary);
+}
+
+
+
+// ESTILOS DE INICIALIZACION REFACTORIZADOS
+//  * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+//  }
+
+// ESTILOS GENERALES
 
 .container {
   max-width: 80%;
@@ -37,35 +74,6 @@
 
 .title-margin-bottom {
   margin-bottom: 5rem;
-}
-
-
-// Reset de márgenes y padding
-body, h1, h2, h3, h4, h5, h6, p, ul, ol {
-  margin: 0;
-  padding: 0;
-}
-
-
-html {
-
-  width: 100%;
-  font-size: 100%;
-  color: var(--color-primary);
-
-  body {
-  width: 100%;
-  font-size: 1rem; // Puedes ajustar esto según tus preferencias
-  background-color: var(--color-background);
-  font-family: montserrat-regular-400;
-  padding-top: 60px;
-}
-  h1 {
-    font-size: 3rem;
-    display: flex;
-    justify-content: center;
-    color: var(--color-secondary);
-  }
 }
 
 
@@ -156,13 +164,8 @@ html {
 
 
 
-
-
-
-
-
-
 // ESTILOS DE PRIMENG
+
 // NAVBAR
 
 .p-menubar .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
@@ -321,8 +324,8 @@ html {
     transform: scale(1.05);
   }
 
+  // ESTILOS DE SWALL-ALERT2
   // CONTACTO
-// swall-alert2
 
   div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
     background-color: #A04B4B!important;
