Updated: Agregamos un background-color al video de nosotros para que se vea mejor: PC

--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -47,6 +47,7 @@
       border-radius: 0.5rem;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
       object-fit: scale-down;
+      background-color: #1F75BD;
     }
   }
   &__contact {
