Updated: Agregamos estilos a nuestro home: PC

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -7,24 +7,19 @@
     <div class="home__content__info__primary container">
 
       <h1>Nuestra Historia</h1>
+      <hr class="colored-line">
+
 
       <section>
 
         <p>
-          Basamento SRL, fundada en 2018 por el Ingeniero Gustavo Cancellieri, es una empresa de ingeniería civil dedicada a aprovechar más de 20 años de experiencia en la industria para brindar servicios excepcionales tanto a la industria como a la comunidad en general. Nuestra amplia cartera muestra una amplia gama de proyectos, cada uno ejecutado con el compromiso de cumplir y superar las expectativas del cliente.
+          Fundada en 2018 por el Ingeniero Gustavo Cancellieri, es una empresa de ingeniería civil dedicada a aprovechar más de 20 años de experiencia en la industria para brindar servicios excepcionales tanto a la industria como a la comunidad en general. Nuestra amplia cartera muestra una amplia gama de proyectos, cada uno ejecutado con el compromiso de cumplir y superar las expectativas del cliente.
+          En Basamento SRL creemos en el poder de las lecciones aprendidas. Valoramos los conocimientos adquiridos en proyectos anteriores y los utilizamos para informar nuestro enfoque y ofrecer resultados sobresalientes en cada nuevo esfuerzo. Nuestra trayectoria habla por sí sola y demuestra nuestra inquebrantable dedicación a la excelencia y la satisfacción del cliente.
         </p>
-        <p-divider></p-divider>
         <p>
-            En Basamento SRL creemos en el poder de las lecciones aprendidas. Valoramos los conocimientos adquiridos en proyectos anteriores y los utilizamos para informar nuestro enfoque y ofrecer resultados sobresalientes en cada nuevo esfuerzo. Nuestra trayectoria habla por sí sola y demuestra nuestra inquebrantable dedicación a la excelencia y la satisfacción del cliente.
+          En BASAMENTO SRL somos más que una simple empresa constructora: somos sus socios en la construcción de un futuro mejor. Ya sea que esté buscando soluciones innovadoras, una ejecución confiable o un servicio excepcional, puede contar con Basamento SRL para brindarlas.
         </p>
-        <p-divider></p-divider>
-        <p>
-          Nuestro equipo está compuesto por profesionales dedicados, cada uno de los cuales aporta su experiencia única. El ingeniero Gustavo Cancellieri lidera la empresa como Director General, asegurando que cada proyecto cumpla con los altos estándares establecidos por Basamento SRL. En el ámbito administrativo, Lionel Cancellieri supervisa las operaciones, garantizando una gestión de proyectos fluida y eficiente. Nuestro personal técnico está compuesto por profesionales capacitados que son expertos en convertir la visión en realidad, mientras que nuestro equipo de ejecución da vida a los proyectos con precisión y cuidado.
-        </p>
-        <p-divider></p-divider>
-        <p>
-          En Basamento SRL somos más que una simple empresa constructora: somos sus socios en la construcción de un futuro mejor. Ya sea que esté buscando soluciones innovadoras, una ejecución confiable o un servicio excepcional, puede contar con Basamento SRL para brindarlas.
-        </p>
+
 
       </section>
 
