--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -1,6 +1,13 @@
 
+//
 
 .nosotros {
+  .colored-line {
+    width: 12rem;
+    height: 0.2rem;
+    background-color: #80722be4;
+    border: none;
+  }
   background-color: var(--color-background-light);
   h2 {
     margin-bottom: 1rem;
