--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -6,8 +6,8 @@
 
     <div class="home__content__info__primary container">
 
-      <h1>Nuestra Historia</h1>
-      <hr class="colored-line">
+      <h1 class="animate__animated animate__fadeInLeft">Nuestra Historia</h1>
+      <hr class="animate__animated animate__fadeInRight colored-line">
 
 
       <section>
