--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -6,7 +6,7 @@
   <div class="container">
 
     <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué Elegirnos? </h2>
-    <hr class="colored-line">
+    <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
 
     <div class="nosotros__card">
       <div>
@@ -87,7 +87,7 @@
     </div>
 
     <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Quiénes somos?? </h2>
-    <hr class="colored-line">
+    <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
     <div class="nosotros__info">
       <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
           ingeniería </strong>
@@ -118,7 +118,7 @@
     <div class="nosotros__content">
       <!-- <app-preguntas-frecuentes /> -->
       <h2 data-aos="zoom-out" data-aos-duration="1000">Preguntas Frecuentes</h2>
-      <hr class="colored-line">
+      <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
 
       <div>
 
@@ -169,7 +169,7 @@
 
     <div class="nosotros nosotros__contact">
       <h2 data-aos="zoom-out" data-aos-duration="1000"> Contáctanos Ahora </h2>
-      <hr class="colored-line">
+      <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
       <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
         los riesgos asociados</p>
       <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
