--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-loading-component *ngIf="isLoading" [isLoading]="isLoading"></app-loading-component>
+  <app-loading-general-component *ngIf="isLoading" [isLoading]="isLoading"></app-loading-general-component>
   <router-outlet *ngIf="!isLoading"></router-outlet>
 </div>
 
