Cambiamos el color del subtitulo del encabezado: PC

--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -38,7 +38,7 @@
     font-size: 1.5rem; // Tamaño de fuente del h4
     top: calc(50% + 2rem); // Coloca el h4 2rem por debajo del h1
     transform: translateY(-50%); // Centra verticalmente el h4
-    color: #ffffffda;
+    color: #ffff;
   }
 }
 
