--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -107,7 +107,7 @@
     </section>
 
     <section>
-      <span class="material-symbols-outlined" data-aos="zoom-in">
+      <span class="material-symbols-outlined">
         timer
       </span>
       <h3>NUESTRAS OFICINAS</h3>
