--- a/src/app/client/components/loading/loading.component.scss
+++ b/src/app/client/components/loading/loading.component.scss
@@ -9,7 +9,7 @@
   justify-content: flex-start;
   height: var(--uib-size);
   width: var(--uib-size);
-  margin: 18rem;
+  margin: auto;
 }
 
 .dot-spinner__dot {
