--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -1,7 +1,7 @@
 
 <div class="header">
   <app-loading [loaded]="videoLoaded"></app-loading>
-  <video class="content animate__animated animate__fadeIn"  src="../../../../assets/videos/home/video_slider.mp4" type="video/mp4"  (loadeddata)="onVideoLoad()" playsinline loop autoplay [muted]="true"></video>
+  <video class="content animate__animated animate__fadeIn"  src="../../../../assets/videos/home/video_slider.mp4" type="video/mp4" (onload)="onVideoLoad()" playsinline loop autoplay preload="auto" [muted]="true"></video>
   <h1 class="focus-in-contract-bck">BIENVENIDOS A BASAMENTO SRL</h1>
   <h4 class="text-focus-in">Ingeniería y Construcción</h4>
 </div>
