Updated: Hago esta actualizacion que creamos un nuevo servicio para el loading, puede que se tenga que volver al commit anterior: PC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
-  <app-loading-general-component *ngIf="isLoading" [isLoading]="isLoading"></app-loading-general-component>
-  <router-outlet *ngIf="!isLoading"></router-outlet>
+  <app-loading-general-component *ngIf="loadingService.loading$ | async"></app-loading-general-component>
+  <router-outlet *ngIf="!(loadingService.loading$ | async)"></router-outlet>
 </div>
+
+
 
 
