Implementamos nueva logica en proyectos, tenemos que terminar: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -2,6 +2,13 @@
 <div class="proyectos content" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
 
   <h1 class="title-margin-bottom animate__animated animate__fadeIn">PROYECTOS</h1>
+
+  <div class="botones">
+    <button routerLink="actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
+    <button routerLink="previos" style="font-size: 1rem; margin-right: 1rem;"> PREVIOS </button>
+    <button routerLink="legado" style="font-size: 1rem; margin-right: 1rem;"> LEGADO </button>
+  </div>
+
   <!-- Contenido específico para cada servicio -->
 <div class="proyectos__content animate__animated animate__fadeIn last-content"  *ngFor="let proyecto of proyectos">
 
