Agreamos la funcionalidad de getProyecto para que me muestre toda la informacion y la navegacion de los botones de prueba: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -4,9 +4,9 @@
   <h1 class="title-margin-bottom animate__animated animate__fadeIn">PROYECTOS</h1>
 
   <div class="botones">
-    <button routerLink="actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
-    <button routerLink="previos" style="font-size: 1rem; margin-right: 1rem;"> PREVIOS </button>
-    <button routerLink="legado" style="font-size: 1rem; margin-right: 1rem;"> LEGADO </button>
+    <button routerLink="/proyectos/actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
+    <button routerLink="/proyectos/previos" style="font-size: 1rem; margin-right: 1rem;"> PREVIOS </button>
+    <button routerLink="/proyectos/legado" style="font-size: 1rem; margin-right: 1rem;"> LEGADO </button>
   </div>
 
   <!-- Contenido específico para cada servicio -->
