Sacamos un loading: PC

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -13,8 +13,7 @@
         presupuesto o simplemente desees conocernos mejor, estamos aquí para escucharte y responder a todas tus
         consultas.
       </p>
-      <app-loading [ngStyle]="{ 'padding': loaded  ? '' : '13.5rem' }" [loaded]="loaded"></app-loading>
-      <img class="swing-in-top-fwd" src="assets/imagenes/contacto/img-contacto.jpg" (load)="loaded = true" alt="">
+      <img class="swing-in-top-fwd" src="assets/imagenes/contacto/img-contacto.jpg" alt="">
     </div>
 
     <div class="contacto__content__form">
