Cambiamos el loading-general a loading de nombre, queda un solo loading para toda la web: PC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-loading-general-component *ngIf="loadingService.loading$ | async"></app-loading-general-component>
+  <app-loading-component *ngIf="loadingService.loading$ | async"></app-loading-component>
   <router-outlet *ngIf="!(loadingService.loading$ | async)"></router-outlet>
 </div>
 
