--- a/src/app/client/components/loading/loading.component.scss
+++ b/src/app/client/components/loading/loading.component.scss
@@ -1,8 +1,18 @@
 .spinnerContainer {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // min-height: 100vh;
+  position: fixed; /* Para que el overlay cubra toda la pantalla */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8); /* Color blanco semi-transparente */
   display: flex;
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
-  min-height: 100vh; /* Asegura que el contenedor ocupe al menos toda la altura de la ventana */
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+  z-index: 9999; /* Asegura que esté por encima de otros elementos */
 }
 
 
