--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 65vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,9 +14,9 @@
     width: 100%;
     height: auto;
     transform: translateY(-50%); // Centra verticalmente el video
-    object-fit: cover; // Para cubrir toda la área del contenedor
-    filter: blur(1.5px) grayscale(20%);
-    opacity: 0.9;
+    object-fit: cover;
+    // filter: blur(1.5px) grayscale(20%);
+    // opacity: 0.9;
   }
 
   h1,
