--- a/src/styles.scss
+++ b/src/styles.scss
@@ -340,3 +340,9 @@ h1 {
   .p-radiobutton .p-radiobutton-box {
     margin-top: -0.13rem;
 }
+
+.home-class {
+  .p-menubar  {
+    background-color: transparent!important;
+  }
+}
