--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -1,16 +1,18 @@
 
-    <p-menubar [model]="items">
-      <ng-template pTemplate="start">
-        <img src="../../../../assets/Logo_2.svg" routerLink="/" />
-      </ng-template>
-      <ng-template pTemplate="end">
-        <span class="search material-symbols-outlined">search</span>
-        <input type="text" pInputText [(ngModel)]="searchTerm" placeholder="Explorar.." class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
-        <div class="error-message" [ngClass]="{'show-error': searchTermError && !searchTermFound}">
-          {{ searchTerm }}
-        </div>
-      </ng-template>
-    </p-menubar>
+    <div [ngClass]="{'home-class': isHome}">
+      <p-menubar [model]="items">
+        <ng-template pTemplate="start">
+          <img src="../../../../assets/Logo_2.svg" routerLink="/" />
+        </ng-template>
+        <ng-template pTemplate="end">
+          <span class="search material-symbols-outlined">search</span>
+          <input type="text" pInputText [(ngModel)]="searchTerm" placeholder="Explorar.." class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
+          <div class="error-message" [ngClass]="{'show-error': searchTermError && !searchTermFound}">
+            {{ searchTerm }}
+          </div>
+        </ng-template>
+      </p-menubar>
+    </div>
 
 
 
