--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,6 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
 
 html {
   font-size: 100%;
-  padding-top: 60px;
 }
 
 body {
@@ -61,7 +60,7 @@ h1 {
 }
 
 .content {
-  padding-top: 3rem;
+  padding-top: 6.75rem;
 }
 
 .last-content {
@@ -173,7 +172,6 @@ h1 {
   top: 0;
   width: 100%;
   z-index: 1000;
-  // height: 6rem;
   background-color: var(--color-primary) ;
   color: #FFC107;
   font-size: 1.3rem;
@@ -198,6 +196,21 @@ h1 {
 
 .p-inputtext:focus {
   border: none !important;
+}
+
+
+// PARA EL NGCLASS DEL P-MENUBAR
+
+.home-class {
+  .p-menubar  {
+    background-color: transparent!important;
+    .search {
+      display: none;
+    }
+    .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
+      display: none;
+    }
+  }
 }
 
 // HOME
@@ -341,8 +354,4 @@ h1 {
     margin-top: -0.13rem;
 }
 
-.home-class {
-  .p-menubar  {
-    background-color: transparent!important;
-  }
-}
+
