--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,6 @@ h1 {
 }
 
 
-
 // ANIMACIONES GENERALES DE MI APLICACIÓN
 
 .puff-in-center {
@@ -157,19 +156,16 @@ h1 {
   }
 }
 
-
-
 // ESTILOS DE PRIMENG
 
 // NAVBAR
-
-
 
 .p-menubar .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
   color: #FFC107;
 }
 
 .p-menubar {
+  transition: height 0.4s ease;
   position: fixed;
   top: 0;
   width: 100%;
@@ -177,6 +173,7 @@ h1 {
   background-color: var(--color-primary) ;
   color: #FFC107;
   font-size: 1.3rem;
+  height: 5.5rem;
   border-radius: 0;
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link {
@@ -206,9 +203,16 @@ h1 {
 
 // PARA EL NGCLASS DEL P-MENUBAR
 
+ .scrolled .p-menubar  {
+  background-color: var(--color-primary) !important;
+  transition: height 0.4s ease;
+  height: 4rem;
+}
+
 .home-class {
+
   .p-menubar  {
-    background-color: transparent!important;
+    background-color: transparent;
 
     .p-menuitem.p-highlight > .p-menuitem-content {
       color: rgba(255, 255, 255, 0.87);
@@ -224,6 +228,7 @@ h1 {
     .search {
       display: none;
     }
+
     // .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
     //   display: none;
     // }
