--- a/src/app/client/shared/navbar/navbar.component.html
+++ b/src/app/client/shared/navbar/navbar.component.html
@@ -7,7 +7,8 @@
         </ng-template>
         <ng-template pTemplate="end">
           <span class="search material-symbols-outlined">search</span>
-          <input type="text" pInputText [(ngModel)]="searchTerm" placeholder="Explorar.." class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
+          <label style="margin-right: 1rem; color: white;">Explorar</label>
+          <input type="text" pInputText [(ngModel)]="searchTerm" class="w-full" [ngClass]="{'error-input': searchTermError && !searchTermFound}" (keyup.enter)="search()" (keyup)="handleKeyUp()" />
           <div class="error-message" [ngClass]="{'show-error': searchTermError && !searchTermFound}">
             {{ searchTerm }}
           </div>
