--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ h1 {
 }
 
 .content {
-  padding-top: 6.75rem;
+  padding-top: 8.5rem;
 }
 
 .last-content {
@@ -173,7 +173,7 @@ h1 {
   background-color: var(--color-primary) ;
   color: #FFC107;
   font-size: 1.3rem;
-  height: 5.5rem;
+  height: 6.5rem;
   border-radius: 0;
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link {
@@ -200,22 +200,43 @@ h1 {
   border: none !important;
 }
 
-
 // PARA EL NGCLASS DEL P-MENUBAR
 
  .scrolled .p-menubar  {
   background-color: var(--color-primary) !important;
   transition: height 0.4s ease;
-  height: 4rem;
+  height: 5.5rem;
+  .error-message {
+    color: white !important;
+  }
+  .show-error {
+    color: red !important;
+    }
+  .p-submenu-list {
+    background-color: var(--color-primary) !important;
+    transition: height 0.4s ease;
+  }
+  .p-menuitem.p-highlight > .p-menuitem-content {
+    background-color: var(--color-primary) !important;
+    transition: height 0.4s ease;
+  }
 }
 
 .home-class {
 
   .p-menubar  {
+    .error-message {
+    color: black;
+    }
+    .show-error {
+    color: red;
+    }
+    .error-message {
+      margin-left: 6rem !important;
+    }
     background-color: transparent;
 
     .p-menuitem.p-highlight > .p-menuitem-content {
-      color: rgba(255, 255, 255, 0.87);
       background: #3E5F91;
     }
     .p-submenu-list {
